--- a/packages/server-backend/package.json
+++ b/packages/server-backend/package.json
@@ -41,6 +41,7 @@
     "md5": "^2.3.0",
     "newsapi": "^2.4.1",
     "node-fetch": "^3.3.2",
+    "socket.io": "^4.8.1",
     "sql.js": "^1.11.0"
   },
   "copyFiles": [
