--- a/packages/server-backend/package.json
+++ b/packages/server-backend/package.json
@@ -5,9 +5,8 @@
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-    "start": "tsx --watch src/server.ts",
-    "dev": "tsc --watch & nodemon dist/server.js",
-    "launch": "tsc && start node dist/server.js",
+    "start": "tsx --watch src/app.ts",
+    "launch": "tsc && tsx --watch src/app.ts",
     "build": "tsc",
     "lint": "eslint ./src ",
     "test": "echo \"Error: no test specified\" && exit 1",
