--- a/packages/server-backend/package.json
+++ b/packages/server-backend/package.json
@@ -41,7 +41,8 @@
     "newsapi": "^2.4.1",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.8.1",
-    "sql.js": "^1.11.0"
+    "sql.js": "^1.11.0",
+    "tsx": "^4.19.2"
   },
   "copyFiles": [
     {
