--- a/packages/mobile-client/package.json
+++ b/packages/mobile-client/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "dotenv": "^16.4.7",
@@ -33,6 +34,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "js-cookie": "^3.0.5",
     "metro-config": "^0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
