--- a/packages/mobile-client/app.json
+++ b/packages/mobile-client/app.json
@@ -23,6 +23,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "expo-asset",
       "expo-router",
       [
         "expo-splash-screen",
