--- a/packages/mobile-client/package.json
+++ b/packages/mobile-client/package.json
@@ -22,7 +22,9 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "dotenv": "^16.4.7",
+    "eventemitter3": "^5.0.1",
     "expo": "~52.0.20",
+    "expo-asset": "^11.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -45,19 +47,24 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "socket.io-client": "^4.8.1"
+    "react-svg": "^16.2.0",
+    "socket.io-client": "^4.8.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "prettier": "^3.3.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
